force-app/main/default/objects/Product2/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Available</label>
    <type>Checkbox</type>
</CustomField>