force-app/main/default/objects/Product2/fields/RemainingQuantity__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity__c</fullName>
    <label>Remaining Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>